--- a/src/view/Menu.fxml
+++ b/src/view/Menu.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -42,7 +43,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="518.0" prefWidth="920.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.menuController.java">
+<VBox xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MenuController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="478.0" prefWidth="868.0" VBox.vgrow="ALWAYS">
       <children>
@@ -56,15 +57,18 @@
                   <Image url="@../Imagenes/fondoMenu.jpg" />
                </image>
                <cursor>
-                  <Cursor fx:constant="OPEN_HAND" />
+                  <Cursor fx:constant="DEFAULT" />
                </cursor>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
             </ImageView>
-            <ImageView fx:id="logoPokemon" fitHeight="105.0" fitWidth="225.0" layoutX="366.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="logoPokemon" fitHeight="105.0" fitWidth="225.0" layoutX="366.0" layoutY="13.0" onMouseClicked="#arriba" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Imagenes/pokeLogo.png" />
                </image>
                <cursor>
-                  <Cursor fx:constant="DEFAULT" />
+                  <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </ImageView>
             <Button id="btnCentroPokemon" fx:id="btnCentroPokemon" layoutX="126.0" layoutY="114.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="270.0" text="Centro Pokémon" textAlignment="CENTER">
@@ -72,7 +76,7 @@
                   <Font name="Lucida Console" size="26.0" />
                </font>
                <cursor>
-                  <Cursor fx:constant="CLOSED_HAND" />
+                  <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
             <Button id="btnEquipo" fx:id="btnEquipo" layoutX="178.0" layoutY="204.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="166.0" text="Equipo" textAlignment="CENTER">
@@ -80,7 +84,7 @@
                   <Font name="Lucida Console" size="26.0" />
                </font>
                <cursor>
-                  <Cursor fx:constant="CLOSED_HAND" />
+                  <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
             <Button id="btnCrianza" fx:id="btnCrianza" layoutX="178.0" layoutY="300.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="166.0" text="Crianza" textAlignment="CENTER">
@@ -88,18 +92,21 @@
                   <Font name="Lucida Console" size="26.0" />
                </font>
                <cursor>
-                  <Cursor fx:constant="CLOSED_HAND" />
+                  <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
             <Label id="labelEntrenador" fx:id="lblEntrenador" layoutX="178.0" layoutY="24.0" text="Label" />
-            <Button id="btnSalir" fx:id="btnSalir" layoutX="842.0" layoutY="457.0" mnemonicParsing="false" text="Salir">
+            <Button id="btnSalir" fx:id="btnSalir" layoutX="841.0" layoutY="463.0" mnemonicParsing="false" onAction="#salir" text="Salir">
                <font>
                   <Font name="Lucida Console" size="18.0" />
                </font>
+               <cursor>
+                  <Cursor fx:constant="OPEN_HAND" />
+               </cursor>
             </Button>
             <Button id="btnCombate" fx:id="btnCombate" layoutX="600.0" layoutY="204.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="166.0" text="Combate" textAlignment="CENTER">
                <cursor>
-                  <Cursor fx:constant="CLOSED_HAND" />
+                  <Cursor fx:constant="OPEN_HAND" />
                </cursor>
                <font>
                   <Font name="Lucida Console" size="26.0" />
@@ -110,7 +117,7 @@
                   <Font name="Lucida Console" size="26.0" />
                </font>
                <cursor>
-                  <Cursor fx:constant="CLOSED_HAND" />
+                  <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
             <Button id="btnEntrenador" fx:id="btnCaptura" layoutX="600.0" layoutY="300.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="166.0" text="Captura" textAlignment="CENTER">
@@ -118,7 +125,7 @@
                   <Font name="Lucida Console" size="26.0" />
                </font>
                <cursor>
-                  <Cursor fx:constant="CLOSED_HAND" />
+                  <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
             <Label id="labelPokedolares" fx:id="lblPokedolares" layoutX="178.0" layoutY="58.0" text="Label" />
@@ -127,7 +134,7 @@
                   <Font name="Lucida Console" size="26.0" />
                </font>
                <cursor>
-                  <Cursor fx:constant="CLOSED_HAND" />
+                  <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
             <Button id="btnCrianza" fx:id="btnPokedex" layoutX="600.0" layoutY="394.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="166.0" text="Pokédex" textAlignment="CENTER">
@@ -135,7 +142,7 @@
                   <Font name="Lucida Console" size="26.0" />
                </font>
                <cursor>
-                  <Cursor fx:constant="CLOSED_HAND" />
+                  <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
             <Text id="lblEntrenador" fx:id="txtEntrenador" layoutX="56.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Entrenador: " textAlignment="CENTER">
