--- a/src/view/Menu.fxml
+++ b/src/view/Menu.fxml
@@ -63,7 +63,7 @@
                   <Rectangle2D />
                </viewport>
             </ImageView>
-            <ImageView fx:id="logoPokemon" fitHeight="105.0" fitWidth="225.0" layoutX="366.0" layoutY="13.0" onMouseClicked="#arriba" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="logoPokemon" accessibleRole="BUTTON" fitHeight="105.0" fitWidth="225.0" layoutX="366.0" layoutY="13.0" onMouseClicked="#arriba" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Imagenes/pokeLogo.png" />
                </image>
@@ -71,7 +71,7 @@
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </ImageView>
-            <Button id="btnCentroPokemon" fx:id="btnCentroPokemon" layoutX="126.0" layoutY="114.0" mnemonicParsing="false" onAction="#abrirCentroPokemon" prefHeight="62.0" prefWidth="270.0" text="Centro Pokémon" textAlignment="CENTER">
+            <Button id="btnCentroPokemon" fx:id="btnCentroPokemon" layoutX="65.0" layoutY="114.0" mnemonicParsing="false" onAction="#abrirCentroPokemon" prefHeight="62.0" prefWidth="270.0" style="-fx-background-color: #FF6B6B; -fx-background-radius: 50; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 2, 2);;" text="Centro Pokémon" textAlignment="CENTER">
                <font>
                   <Font name="Lucida Console" size="26.0" />
                </font>
@@ -79,7 +79,7 @@
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
-            <Button id="btnEquipo" fx:id="btnEquipo" layoutX="178.0" layoutY="204.0" mnemonicParsing="false" onAction="#abrirEquipo" prefHeight="62.0" prefWidth="166.0" text="Equipo" textAlignment="CENTER">
+            <Button id="btnEquipo" fx:id="btnEquipo" layoutX="137.0" layoutY="204.0" mnemonicParsing="false" onAction="#abrirEquipo" prefHeight="62.0" prefWidth="166.0" style="-fx-background-color: #4D96FF; -fx-background-radius: 50px; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 2, 2);" text="Equipo" textAlignment="CENTER">
                <font>
                   <Font name="Lucida Console" size="26.0" />
                </font>
@@ -87,7 +87,7 @@
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
-            <Button id="btnCrianza" fx:id="btnCrianza" layoutX="178.0" layoutY="300.0" mnemonicParsing="false" onAction="#abrirCrianza" prefHeight="62.0" prefWidth="166.0" text="Crianza" textAlignment="CENTER">
+            <Button id="btnCrianza" fx:id="btnCrianza" layoutX="170.0" layoutY="300.0" mnemonicParsing="false" onAction="#abrirCrianza" prefHeight="62.0" prefWidth="166.0" style="-fx-background-radius: 50px; -fx-background-color: #FFB7D5; -fx-border-radius: 50px; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 2, 2);" text="Crianza" textAlignment="CENTER">
                <font>
                   <Font name="Lucida Console" size="26.0" />
                </font>
@@ -96,7 +96,7 @@
                </cursor>
             </Button>
             <Label id="labelEntrenador" fx:id="lblEntrenador" layoutX="178.0" layoutY="24.0" text="Label" />
-            <Button id="btnSalir" fx:id="btnSalir" layoutX="841.0" layoutY="463.0" mnemonicParsing="false" onAction="#salir" text="Salir">
+            <Button id="btnSalir" fx:id="btnSalir" layoutX="841.0" layoutY="463.0" mnemonicParsing="false" onAction="#salir" style="-fx-effect: innershadow(gaussian, rgba(0,0,0,0.5), 10, 0.5, 0, 0);" text="Salir">
                <font>
                   <Font name="Lucida Console" size="18.0" />
                </font>
@@ -104,7 +104,7 @@
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
-            <Button id="btnCombate" fx:id="btnCombate" layoutX="600.0" layoutY="204.0" mnemonicParsing="false" onAction="#abrirCombate" prefHeight="62.0" prefWidth="166.0" text="Combate" textAlignment="CENTER">
+            <Button id="btnCombate" fx:id="btnCombate" layoutX="643.0" layoutY="204.0" mnemonicParsing="false" onAction="#abrirCombate" prefHeight="62.0" prefWidth="166.0" style="-fx-background-radius: 50px; -fx-background-color: #FF3B3F; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 2, 2);" text="Combate" textAlignment="CENTER">
                <cursor>
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
@@ -112,7 +112,7 @@
                   <Font name="Lucida Console" size="26.0" />
                </font>
             </Button>
-            <Button id="btnEntrenamiento" fx:id="btnEntrenamiento" layoutX="548.0" layoutY="114.0" mnemonicParsing="false" onAction="#abrirEntrenamiento" prefHeight="62.0" prefWidth="270.0" text="Entrenamiento" textAlignment="CENTER">
+            <Button id="btnEntrenamiento" fx:id="btnEntrenamiento" layoutX="621.0" layoutY="114.0" mnemonicParsing="false" onAction="#abrirEntrenamiento" prefHeight="62.0" prefWidth="270.0" style="-fx-background-radius: 50px; -fx-background-color: #FFA500; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 2, 2);" text="Entrenamiento" textAlignment="CENTER">
                <font>
                   <Font name="Lucida Console" size="26.0" />
                </font>
@@ -120,7 +120,7 @@
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
-            <Button id="btnEntrenador" fx:id="btnCaptura" layoutX="600.0" layoutY="300.0" mnemonicParsing="false" onAction="#abrirCaptura" prefHeight="62.0" prefWidth="166.0" text="Captura" textAlignment="CENTER">
+            <Button id="btnEntrenador" fx:id="btnCaptura" layoutX="621.0" layoutY="300.0" mnemonicParsing="false" onAction="#abrirCaptura" prefHeight="62.0" prefWidth="166.0" style="-fx-background-radius: 50px; -fx-background-color: #7FFF00; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 2, 2);" text="Captura" textAlignment="CENTER">
                <font>
                   <Font name="Lucida Console" size="26.0" />
                </font>
@@ -129,7 +129,7 @@
                </cursor>
             </Button>
             <Label id="labelPokedolares" fx:id="lblPokedolares" layoutX="178.0" layoutY="58.0" text="Label" />
-            <Button id="btnTienda" fx:id="btnTienda" layoutX="178.0" layoutY="394.0" mnemonicParsing="false" onAction="#abrirTienda" prefHeight="62.0" prefWidth="166.0" text="Tienda" textAlignment="CENTER">
+            <Button id="btnTienda" fx:id="btnTienda" layoutX="192.0" layoutY="394.0" mnemonicParsing="false" onAction="#abrirTienda" prefHeight="62.0" prefWidth="166.0" style="-fx-background-color: #FFD93D; -fx-background-radius: 50px; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 2, 2);" text="Tienda" textAlignment="CENTER">
                <font>
                   <Font name="Lucida Console" size="26.0" />
                </font>
@@ -137,7 +137,7 @@
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
-            <Button id="btnCrianza" fx:id="btnPokedex" layoutX="600.0" layoutY="394.0" mnemonicParsing="false" onAction="#abrirPokedex" prefHeight="62.0" prefWidth="166.0" text="Pokédex" textAlignment="CENTER">
+            <Button id="btnCrianza" fx:id="btnPokedex" layoutX="591.0" layoutY="394.0" mnemonicParsing="false" onAction="#abrirPokedex" prefHeight="62.0" prefWidth="166.0" style="-fx-background-color: #00CFFF; -fx-background-radius: 50px; -fx-effect: dropshadow(gaussian, rgba(0,0,0,0.75), 10, 0.5, 2, 2);" text="Pokédex" textAlignment="CENTER">
                <font>
                   <Font name="Lucida Console" size="26.0" />
                </font>
@@ -145,16 +145,26 @@
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
             </Button>
-            <Text id="lblEntrenador" fx:id="txtEntrenador" layoutX="56.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Entrenador: " textAlignment="CENTER">
+            <Text id="lblEntrenador" layoutX="56.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Entrenador: " textAlignment="CENTER">
                <font>
                   <Font name="Segoe UI Black" size="18.0" />
                </font>
             </Text>
-            <Text id="lblPokedolares" fx:id="txtPokedolares" layoutX="50.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pokedolares: " textAlignment="CENTER">
+            <Text id="lblPokedolares" layoutX="50.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pokedolares: " textAlignment="CENTER">
                <font>
                   <Font name="Segoe UI Black" size="18.0" />
                </font>
             </Text>
+            <ImageView fitHeight="92.0" fitWidth="110.0" layoutX="834.0" layoutY="8.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Users/IvanJ/OneDrive/Escritorio/fotitos%20pokemon/Pokeball.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="83.0" fitWidth="110.0" layoutX="15.0" layoutY="421.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../Users/IvanJ/OneDrive/Escritorio/fotitos%20pokemon/Pokeball.png" />
+               </image>
+            </ImageView>
       </children>
     </AnchorPane>
   </children>
