--- a/src/view/CentroPokemon.fxml
+++ b/src/view/CentroPokemon.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
@@ -39,83 +40,110 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <VBox xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-        <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
-          <font>
-            <Font size="18.0" />
-          </font>
-        </Label>
-            <ImageView fx:id="btnCurarPokemon" fitHeight="594.0" fitWidth="726.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../imagenes/imagen.png" />
-               </image>
-            </ImageView>
-            <Button layoutX="251.0" layoutY="462.0" mnemonicParsing="false" prefHeight="77.0" prefWidth="200.0">
-               <graphic>
-                  <ImageView fitHeight="78.0" fitWidth="216.0" onDragDetected="#curarPokemons" onMouseClicked="#curarPokemons" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../imagenes/btnCurarPokemons.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Button>
-            <ImageView fitHeight="79.0" fitWidth="272.0" layoutX="250.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="btnCurarPokemon" fitHeight="611.0" fitWidth="642.0" layoutX="1.0" layoutY="-8.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../imagenes/centroPokemon.png" />
                </image>
             </ImageView>
-            <Label fx:id="lbl5" layoutX="188.0" layoutY="336.0" text="Label" />
-            <Label fx:id="lbl4" layoutX="481.0" layoutY="263.0" text="Label" />
-            <Label fx:id="lbl2" layoutX="481.0" layoutY="168.0" text="Label" />
-            <Label fx:id="lbl3" layoutX="188.0" layoutY="254.0" text="Label" />
-            <Label fx:id="lbl1" layoutX="188.0" layoutY="168.0" text="Label" />
-            <Label fx:id="lbl6" layoutX="481.0" layoutY="336.0" text="Label" />
-            <ProgressBar fx:id="bar6" layoutX="395.0" layoutY="373.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar1" layoutX="102.0" layoutY="206.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar5" layoutX="102.0" layoutY="373.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar3" layoutX="102.0" layoutY="294.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar4" layoutX="395.0" layoutY="294.0" prefWidth="200.0" progress="0.0" />
-            <ProgressBar fx:id="bar2" layoutX="395.0" layoutY="206.0" prefWidth="200.0" progress="0.0" />
-            <Button fx:id="btnSalir" layoutX="636.0" layoutY="540.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="52.0" text="Salir">
+            <ImageView fx:id="btnCurarPokemons" fitHeight="57.0" fitWidth="300.0" layoutX="10.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/imgCentroPokemon.png" />
+               </image>
+            </ImageView>
+            <ProgressBar fx:id="bar6" layoutX="386.0" layoutY="456.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar1" layoutX="27.0" layoutY="201.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar5" layoutX="27.0" layoutY="456.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar3" layoutX="27.0" layoutY="331.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar4" layoutX="390.0" layoutY="332.0" prefWidth="200.0" progress="0.0" />
+            <ProgressBar fx:id="bar2" layoutX="386.0" layoutY="201.0" prefWidth="200.0" progress="0.0" />
+            <ImageView fitHeight="68.0" fitWidth="98.0" layoutX="521.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/menu/centroPokemon.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="btnCurarPokemons" layoutX="252.0" layoutY="501.0" mnemonicParsing="false" onAction="#curarPokemons" prefHeight="44.0" prefWidth="107.0" style="-fx-background-color: #ff5b5d; -fx-background-radius: 25px; -fx-border-radius: 25px;" text="Curar Pokemons" textFill="WHITE">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Monospaced Regular" size="24.0" />
                </font>
             </Button>
-            <Text layoutX="285.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enfermera Joy">
+            <ImageView fitHeight="51.0" fitWidth="137.0" layoutX="252.0" layoutY="498.0" onDragDetected="#curarPokemons" onMouseClicked="#curarPokemons" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/imgCurarPokemons.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm1" fitHeight="148.0" fitWidth="134.0" layoutX="60.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/10.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm2" fitHeight="148.0" fitWidth="134.0" layoutX="419.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/10.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm3" fitHeight="148.0" fitWidth="134.0" layoutX="60.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/10.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm4" fitHeight="148.0" fitWidth="134.0" layoutX="423.0" layoutY="210.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/10.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm5" fitHeight="148.0" fitWidth="134.0" layoutX="60.0" layoutY="349.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/10.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pkm6" fitHeight="148.0" fitWidth="134.0" layoutX="423.0" layoutY="349.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/Pokemon/Front/10.png" />
+               </image>
+            </ImageView>
+            <Button id="btnSalir" fx:id="btnSalir" layoutX="520.0" layoutY="556.0" mnemonicParsing="false" onAction="#salir" style="-fx-effect: innershadow(gaussian, rgba(0,0,0,0.5), 10, 0.5, 0, 0);" text="Salir">
                <font>
-                  <Font name="Candara Bold" size="22.0" />
+                  <Font name="Lucida Console" size="18.0" />
                </font>
-               <fill>
-                  <LinearGradient endX="1.0" endY="1.0">
-                     <stops>
-                        <Stop>
-                           <color>
-                              <Color red="1.0" green="0.4481481611728668" blue="0.7148765325546265" />
-                           </color>
-                        </Stop>
-                        <Stop offset="0.006729475100942127">
-                           <color>
-                              <Color red="1.0" green="0.4481481611728668" blue="0.7148765325546265" />
-                           </color>
-                        </Stop>
-                        <Stop offset="1.0">
-                           <color>
-                              <Color red="1.0" />
-                           </color>
-                        </Stop>
-                     </stops>
-                  </LinearGradient>
-               </fill>
-            </Text>
+               <cursor>
+                  <Cursor fx:constant="OPEN_HAND" />
+               </cursor>
+            </Button>
+            <Label fx:id="lbl1" layoutX="112.0" layoutY="181.0" text="Label">
+               <font>
+                  <Font name="MingLiU-ExtB" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="lbl2" layoutX="475.0" layoutY="181.0" text="Label">
+               <font>
+                  <Font name="MingLiU-ExtB" size="12.0" />
+               </font></Label>
+            <Label fx:id="lbl3" layoutX="112.0" layoutY="308.0" text="Label">
+               <font>
+                  <Font name="MingLiU-ExtB" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="lbl4" layoutX="475.0" layoutY="308.0" text="Label">
+               <font>
+                  <Font name="MingLiU-ExtB" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="lbl5" layoutX="112.0" layoutY="439.0" text="Label">
+               <font>
+                  <Font name="MingLiU-ExtB" size="12.0" />
+               </font>
+            </Label>
+            <Label fx:id="lbl6" layoutX="475.0" layoutY="439.0" text="Label">
+               <font>
+                  <Font name="MingLiU-ExtB" size="12.0" />
+               </font>
+            </Label>
       </children>
     </AnchorPane>
   </children>
